@@ -1,10 +1,14 @@
 ## Please update this variable if any new macros are created
+
+dist_MACROS = plasma.m4
+
 MACROS= \
 	cpp-setup.m4 \
 	occ.m4 \
-	qt.m4
+	qt.m4 \
+	$(dist_MACROS)
 
 EXTRA_DIST = $(MACROS)
 
 m4datadir = $(datadir)/aclocal
-m4data_DATA = $(MACROS)
+m4data_DATA = $(dist_MACROS)
