@@ -1,3 +1,8 @@
+2004-10-13  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Added plasm.m4, a macro that can be used by plasma users to
+	detect plasma.
+
         ======= plasma release 0.8.0 (v0_8_0) on Linux (cde-tx32-ldt189) =======
 
 2004-10-08  Brian Kahne  <tdukes@freescale.com>
